--- a/src/sistempembelianpenjualan/FXML_DisplayBarang.fxml
+++ b/src/sistempembelianpenjualan/FXML_DisplayBarang.fxml
@@ -178,7 +178,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button fx:id="btnJual" layoutX="292.0" layoutY="519.0" mnemonicParsing="false" onAction="#jualKlik" prefHeight="73.0" prefWidth="143.0" style="-fx-background-radius: 5em;" text="Jual" textFill="WHITE">
+      <Button fx:id="btnJual" layoutX="292.0" layoutY="519.0" mnemonicParsing="false" onAction="#jualKlik" prefHeight="73.0" prefWidth="202.0" style="-fx-background-radius: 5em;" text="Jual Barang" textFill="WHITE">
          <font>
             <Font name="Century751 BT Italic" size="27.0" />
          </font>
