--- a/src/tokoelektronik/FXML_ElektronikHome.fxml
+++ b/src/tokoelektronik/FXML_ElektronikHome.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="tokoelektronik.FXML_ElektronikHomeController">
+<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tokoelektronik.FXML_ElektronikHomeController">
    <children>
       <ImageView fitHeight="700.0" fitWidth="1000.0" pickOnBounds="true">
          <image>
@@ -36,7 +35,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Label fx:id="electronicTitle" layoutX="108.0" layoutY="81.0" prefHeight="71.0" prefWidth="785.0" style="-fx-alignment: center;" text="Ringo's Store" textAlignment="CENTER">
+      <Label layoutX="108.0" layoutY="81.0" prefHeight="71.0" prefWidth="785.0" style="-fx-alignment: center;" text="Ringo's Store" textAlignment="CENTER">
          <font>
             <Font name="Lucida Calligraphy Italic" size="67.0" />
          </font>
